libnodegl/src/nodegl/nodegl.h

/**
 * Logging levels
 */
enum {
    NGL_LOG_VERBOSE,
    NGL_LOG_DEBUG,
    NGL_LOG_INFO,
    NGL_LOG_WARNING,
    NGL_LOG_ERROR,
};
/**
 * Set the minimum global logging level.
 *
 * No message with its level inferior to the specified level will be logged
 * (with or without the callback set).
 *
 * @param level log level (any of NGL_LOG_*)
 */
void ngl_log_set_min_level(int level);
/**
 * Opaque structure identifying a node
 */
struct ngl_node;
/**
 * Allocate a node.
 *
 * This function does not perform any OpenGL operation.
 *
 * The reference counter of the allocated node is set to 1.
 *
 * Must be destroyed using ngl_node_unrefp().
 *
 * @param type  identify the node (any of NGL_NODE_*)
 *
 * @return a new allocated node or NULL on error
 */
struct ngl_node *ngl_node_create(int type);
/**
 * Increment the reference counter of a given node by 1.
 *
 * This function is NOT thread-safe.
 *
 * This function does not perform any OpenGL operation.
 *
 * @param node  pointer to the node to reference count
 *
 * @return node with its reference counter incremented.
 */
struct ngl_node *ngl_node_ref(struct ngl_node *node);
/**
 * Decrement the reference counter of a given node by 1, and destroy its
 * content if the reference counter reaches 0. The passed node pointer will
 * also be set to NULL.
 *
 * @param nodep  pointer to the pointer to the target node
 */
void ngl_node_unrefp(struct ngl_node **nodep);
/**
 * Add entries to a list-based parameter of an allocated node.
 *
 * If the type of the parameter is node based, the reference counter of the
 * passed nodes will be incremented.
 *
 * @param node      pointer to the target node
 * @param key       string identifying the parameter
 * @param nb_elems  number of elements to append
 * @param elems     pointer to an array of values in parameter type
 *
 * @return 0 on success, NGL_ERROR_* (< 0) on error
 */
int ngl_node_param_add(struct ngl_node *node, const char *key,
                       int nb_elems, void *elems);
/**
 * Set a parameter value of an allocated node.
 *
 * If the type of the parameter is node based, the reference counter of the
 * passed node will be incremented.
 *
 * @param node      pointer to the target node
 * @param key       string identifying the parameter
 * @param ...       the value in parameter type
 *
 * @return 0 on success, NGL_ERROR_* (< 0) on error
 */
int ngl_node_param_set(struct ngl_node *node, const char *key, ...);
/**
 * Serialize in Graphviz format (.dot) a node graph.
 *
 * Must be destroyed using free().
 *
 * @return an allocated string in dot format or NULL on error
 *
 * @see ngl_dot()
 */
char *ngl_node_dot(const struct ngl_node *node);
/**
 * Serialize in node.gl format (.ngl).
 *
 * Must be destroyed using free().
 *
 * @return an allocated string in node.gl format or NULL on error
 */
char *ngl_node_serialize(const struct ngl_node *node);
/**
 * De-serialize a scene.
 *
 * @param s  string in node.gl serialized format.
 *
 * Must be destroyed using ngl_node_unrefp().
 *
 * @return a pointer to the de-serialized node graph or NULL on error
 */
struct ngl_node *ngl_node_deserialize(const char *s);
/**
 * Platform-specific identifiers
 */
enum {
    NGL_PLATFORM_AUTO,
    NGL_PLATFORM_XLIB,
    NGL_PLATFORM_ANDROID,
    NGL_PLATFORM_MACOS,
    NGL_PLATFORM_IOS,
    NGL_PLATFORM_WINDOWS,
    NGL_PLATFORM_WAYLAND,
};
/**
 * Rendering backends
 */
enum {
    NGL_BACKEND_AUTO,
    NGL_BACKEND_OPENGL,
    NGL_BACKEND_OPENGLES,
    NGL_BACKEND_VULKAN,
    NGL_BACKEND_NGFX
};
/**
 * node.gl configuration
 */
struct ngl_config {
    int platform;  /* Platform-specific identifier (any of NGL_PLATFORM_*) */

    int backend;   /* Rendering backend (any of NGL_BACKEND_*) */

    uintptr_t display; /* A native display handle */

    uintptr_t window;  /* A native window handle */

    uintptr_t handle;  /* A native OpenGL context handle */

    int swap_interval; /* Specifies the minimum number of video frames that are
                          displayed before a buffer swap will occur. -1 can be
                          used to use the default system implementation value.
                          This option is only honored on Linux, macOS, and
                          Android (iOS does not provide swap interval control).
                          */

    int offscreen; /* Whether the rendering should happen offscreen or not */

    int width;     /* Graphic context width, mandatory for offscreen rendering */

    int height;    /* Graphic context height, mandatory for offscreen rendering */

    int viewport[4]; /* Viewport defined as x, y, width and height */

    int samples;   /* Number of samples used for multisample anti-aliasing */

    int set_surface_pts; /* Whether pts should be set to the surface or not (Android only).
                            Unsupported with offscreen rendering. */

    float clear_color[4]; /* Clear color (red, green, blue, alpha) */

    uint8_t *capture_buffer; /* RGBA offscreen capture buffer. If allocated,
                                its size must be at least width * height * 4
                                bytes. */
};
/**
 * Opaque structure identifying a node.gl context
 */
struct ngl_ctx;
/**
 * Allocate a new node.gl context.
 *
 * Must be destroyed using ngl_freep().
 *
 * This function does not perform any OpenGL operation.
 *
 * @return a pointer to the context, or NULL on error
 */
struct ngl_ctx *ngl_create(void);
/**
 * Configure the node.gl context.
 *
 * This function must be called before any ngl_draw() call.
 *
 * This function must be called on the UI/main thread on iOS/macOS.
 *
 * If the context has already been configured, calling ngl_configure() will
 * perform a hard-reconfiguration meaning it will de-allocate the ressources of
 * any associated scene, reconfigure the rendering backend and finally
 * re-allocate the ressources of any previously associated scene.
 *
 * @param s        pointer to a node.gl context
 * @param config   pointer to a node.gl configuration structure (cannot be NULL)
 *
 * @return 0 on success, NGL_ERROR_* (< 0) on error
 */
int ngl_configure(struct ngl_ctx *s, struct ngl_config *config);
/**
 * Update the swap chain buffers size.
 *
 * This function must be called on the UI/main thread on iOS/macOS.
 *
 * @param width new width of the swap chain buffers
 * @param height new height of the swap chain buffers
 * @param viewport new viewport of the current render target,
 *                 a NULL pointer will make the new viewport match the
 *                 dimensions of the swap chain buffers
 * @return 0 on success, NGL_ERROR_* (< 0) on error
 */
int ngl_resize(struct ngl_ctx *s, int width, int height, const int *viewport);
/**
 * Associate a scene with a node.gl context.
 *
 * The reference counter of the root node will be incremented and all its node
 * will be associated with the specified node.gl context.
 *
 * The nodes can be associated with only one node.gl context.
 *
 * If any scene was previously associated with the context, it is detached from
 * it and its reference counter decremented.
 *
 * To only detach the currently associated scene, scene=NULL can be used.
 *
 * @param s      pointer to the configured node.gl context
 * @param scene  pointer to the scene
 *
 * @note node.gl context must to be configured before calling this function.
 *
 * @return 0 on success, NGL_ERROR_* (< 0) on error
 */
int ngl_set_scene(struct ngl_ctx *s, struct ngl_node *scene);
/**
 * Draw at the specified time.
 *
 * @param s     pointer to the configured node.gl context
 * @param t     target draw time in seconds
 *
 * @note ngl_draw() will only perform a clear if no scene is set.
 *
 * @return 0 on success, NGL_ERROR_* (< 0) on error
 */
int ngl_draw(struct ngl_ctx *s, double t);
/**
 * Serialize the current scene in Graphviz format (.dot) a node graph at the
 * specified time. Non active nodes will be grayed.
 *
 * Must be destroyed using free().
 *
 * @return an allocated string in dot format or NULL on error
 *
 * @see ngl_node_dot()
 */
char *ngl_dot(struct ngl_ctx *s, double t);
/**
 * Destroy a node.gl context. The passed context pointer will also be set to
 * NULL.
 *
 * @param ss    pointer to the pointer to the node.gl context
 */
void ngl_freep(struct ngl_ctx **ss);
/**
 * Evaluate an animation at a given time t.
 *
 * @param anim  the animation node can be any of AnimatedFloat, AnimatedVec2,
 *              AnimatedVec3, or AnimatedVec4
 * @param dst   pointer to the destination for the interpolated value(s), needs
 *              to hold enough space depending on the type of anim
 *              (AnimatedFloat is float[1], AnimatedVec2 is float[2],
 *              AnimatedVec3 is float[3], AnimatedVec4 is float[4],
 *              AnimatedQuat is float[4])
 * @param t     the target time at which to interpolate the value(s)
 *
 * @return 0 on success, NGL_ERROR_* (< 0) on error
 */
int ngl_anim_evaluate(struct ngl_node *anim, void *dst, double t);
/**
 * Evaluate an easing at a given time t
 *
 * @param name      the easing name
 * @param args      a list of arguments some easings may use, can be NULL
 * @param nb_args   number of arguments in args
 * @param offsets   starting and ending offset of the truncation of the easing, can be NULL or point to two doubles
 * @param t         the target time
 * @param v         pointer for the resulting value
 *
 * @return 0 on success, NGL_ERROR_* (< 0) on error
 */
int ngl_easing_evaluate(const char *name, double *args, int nb_args,
                        double *offsets, double t, double *v);
/**
 * Solve an easing for a given value t
 *
 * @param name      the easing name
 * @param args      a list of arguments some easings may use, can be NULL
 * @param nb_args   number of arguments in args
 * @param offsets   starting and ending offset of the truncation of the easing, can be NULL or point to two doubles
 * @param v         the target value
 * @param t         pointer for the resulting time
 *
 * @note Not all easings have a resolution function available
 *
 * @return 0 on success, NGL_ERROR_* (< 0) on error
 */
int ngl_easing_solve(const char *name, double *args, int nb_args,
                     double *offsets, double v, double *t);